# booksim

./: .gitignore  .gitmodules  README.md  TODO.txt  cleanup.sh  dockerfile  dockerfile_interface  ea.sh  embed_cost.py  enable_user_mapping.sh  examplefinder.py  examples.json  ideas.txt  init.txt  permissions.py  resim.sh  rpg_start.py  sandbox.py  server.py  setup_web.py  technical.txt  test.py  user.sh
bootstrap/: create_prefab_highlighted.html  create_prefab_highlighted.txt  design_with_flecs.html  design_with_flecs.txt  emerge.py  flecs_manual.html  flecs_manual.txt  framework.py  function.py  get_relevant_lines.py  html2txt.py  visualize.py
bootstrap/lq/flecs_manual/: ('access_named_entity_in_macro',).json  create_prefab.json
game/: CMakeLists.txt  all_functions.py  astparse.py  ecs_systems.py  functions.txt  main.c  systems.txt  test.py
game/client/: a.out  client  client.c
game/include/: cute_aseprite.h
game/res/: dialogue.ase  shapes.ase  table.ase
game/test/: conv.py  interface  interface.c
quest/: gen1.py
team/: desc.json  flecsdoc.txt  personality.txt  sim.py  stats.ase  table.ase
team/design/bitfont/: bitfont.lua  char-map.lua  gencharmap.py  package.json
team/work/RPG/: server.py
team/work/bulwark/: description.json  individuation.py  permissions_test.py
team/work/cascade/: description.json  individuation.py  permissions_test.py
team/work/ivory/: client.py  (+4 more)
train/: aseprite_format.txt  bookmark.py  bookmarks.html  combine.py  combined.json  create_file.py  create_file_meta.py  example.py  links0.json  links1.json  links2.json  links3.json  output.txt  url_extract.py
(+21 files in other folders)
